feat: transform photography tab into full Listing Boosts hub
- Renamed 'Photography' tab to 'Boosts' with Rocket icon
- Integrated all strategic add-ons (Boost, Slots, Photos, Video, 3D, Open House)
- Implemented property selection flow for applying upgrades to existing listings
- Synchronized pricing across mobile app, upsell modal, and strategy document
- Fixed Supabase join syntax for fetching user properties
- Polished UI/UX with smooth transitions and conditional form fields

--- a/ROOGO_BUSINESS_STRATEGY.tex
+++ b/ROOGO_BUSINESS_STRATEGY.tex
@@ -71,6 +71,7 @@ Le système utilise l'urgence pour motiver les chercheurs et assurer une rotatio
     \item Vidéo Professionnelle (si non incluse) : 10 000 XOF
     \item Environnement 3D : 25 000 XOF
     \item Boost "A la Une" (7 jours) : 7 000 XOF
+    \item +1 Session Open House : 3 000 XOF
 \end{itemize}
 
 \section{Flux Opérationnel}
