docs(strategy): update business strategy and add ICP profiles
- Reference ICP and content strategy in main business strategy document
- Add detailed Ideal Customer Profiles (ICP) for Burkina Faso market

--- a/ROOGO_BUSINESS_STRATEGY.tex
+++ b/ROOGO_BUSINESS_STRATEGY.tex
@@ -154,4 +154,7 @@ Avec un \textbf{minimum de 10 000 XOF} pour garantir la rentabilité sur les pet
     \item Le staff définit les créneaux de visite via la console d'administration web.
 \end{itemize}
 
+\section{Références}
+Pour les profils clients idéaux (ICP), la stratégie marketing d'influence et la stratégie de contenu réseaux sociaux, voir le document séparé : \texttt{ROOGO\_ICP\_BURKINA\_FASO.tex}
+
 \end{document}
